--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Krishna Revanth <krishnarevanth.kurumeti@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bchiang7/v4"
+    "url": "https://github.com/KrishnaRevanth123"
   },
   "keywords": [
     "gatsby"
